<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/school_sn_top"
    tools:context=".ui.home.HomeFragment" >
    <ScrollView
        android:id="@+id/scrollView10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/admin_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/welcome_to_admin_homepage"
                android:textSize="30sp"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="#190707">

            </FrameLayout>

            <TextView
                android:id="@+id/textView37"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#10D10A"
                android:padding="5dp"
                android:text="@string/the_admin_has_the_following_abilities" />

            <TextView
                android:id="@+id/textView49"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_1_upload_student_results" />

            <TextView
                android:id="@+id/textView50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_2_view_student_results_all_spesific" />

            <TextView
                android:id="@+id/textView66"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_3_delete_student_details" />

            <TextView
                android:id="@+id/textView67"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_4_upload_assignments_pdf_audio_video" />

            <TextView
                android:id="@+id/textView69"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_5_write_a_notice_and_publish_it" />

            <TextView
                android:id="@+id/textView68"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_6_view_and_add_teachers" />

            <TextView
                android:id="@+id/textView70"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="#20D812"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="@string/the_guidel"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView71"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/this_section_is_meant_for_the_admin_who_has_not_used_this_application_before_and_would_like_to_have_a_guide_please_follow_along_with_the_steps_given_to_the_activity_you_want_to_do" />

            <TextView
                android:id="@+id/textView72"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_1_uploading_of_results"
                android:textColor="#0D30FB"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView73"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_1_go_to_dashboard" />

            <TextView
                android:id="@+id/textView79"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_2_click_on_results" />

            <TextView
                android:id="@+id/textView78"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_3_insert_your_resultd_then_upoad" />

            <TextView
                android:id="@+id/textView80"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_2_view_all_results"
                android:textColor="#0D30FB"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView82"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_3_view_all_student_data"
                android:textColor="#0D30FB"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView83"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_4_add_or_delete_student_data"
                android:textColor="#0D30FB"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView84"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_5_upload_assignment"
                android:textColor="#0D30FB"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView113"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1.Dashborad" />

            <TextView
                android:id="@+id/textView114"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2.Home work" />

            <TextView
                android:id="@+id/textView115"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="3.Select the type of uploaing file" />

            <TextView
                android:id="@+id/textView116"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="4.Upload " />

            <TextView
                android:id="@+id/textView85"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_6_write_notice"
                android:textColor="#0D30FB"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView110"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1.Dashboad" />

            <TextView
                android:id="@+id/textView111"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2.Notice" />

            <TextView
                android:id="@+id/textView112"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="3.Write your notice and send." />

            <TextView
                android:id="@+id/textView86"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_7_view_and_add_teachers"
                android:textColor="#0D30FB"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="8.Upload exam calender."
                android:textColor="#0D30FB"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>