<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.students.AddStudentsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_title_addstd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/add_students"
                android:textAlignment="center"
                android:textColor="#4612A3"
                android:textSize="25sp"
                android:layout_marginBottom="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_std_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/student_name" />

            <EditText
                android:id="@+id/in_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/student_names"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/forgot_ps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/student_adm" />

            <EditText
                android:id="@+id/in_adm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/addmission_number"
                android:inputType="number"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/dont_have_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/student_class" />

            <EditText
                android:id="@+id/in_class"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/student_class_in"
                android:inputType="textPersonName"
                android:importantForAutofill="no" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/in_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/from"
                    android:inputType="date"
                    android:importantForAutofill="no" />

                <EditText
                    android:id="@+id/in_towhen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/to_when"
                    android:inputType="date"
                    android:importantForAutofill="no" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnaddbook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btn_view"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/view" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>