<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grey_bcakground"
    tools:context=".students.upload.UpActivity">

    <ScrollView
        android:id="@+id/scrollView12"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView46"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/upload_images"
                android:textColor="#E53935"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/firebaseimage"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginVertical="30dp"
                android:contentDescription="@string/select_imagemm"

                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/select_btn"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/secb"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/select_image"
                android:textColor="#039BE5"
                android:textSize="20sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_attach_white" />

            <TextView
                android:id="@+id/upload_btn"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/parents"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/upload_image"
                android:textColor="#039BE5"
                android:textSize="20sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_attach_white" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>