<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/basaamoney"
    tools:context=".basaa.BasaaActivity">

    <TextView
        android:id="@+id/textView87"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="250dp"
        android:gravity="center_horizontal"
        android:text="SchoolaX Basaa Page"
        android:textColor="#930808"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/basaa_signin"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:background="@drawable/trial_bg"
        android:padding="15dp"
        android:text="@string/sign_in"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/basaa_signup"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:background="@drawable/trial_bg"
        android:padding="15dp"
        android:text="@string/sign_up"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView90"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="246dp"
        android:text="@string/welcome_basaa_wish_you_a_nice_time_ahead_as_you_go_on_with_your_accountings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView87" />
</androidx.constraintlayout.widget.ConstraintLayout>