<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/share_bg"
    tools:context=".admin.homework.AssignmentActivity">
    <ScrollView
        android:id="@+id/scrollView9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/assg_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Assigment Upload"
                android:textColor="#C5360A"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView51"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="In this section the addimin has the ability to upload assingnment in different form ,which includes.." />

            <TextView
                android:id="@+id/textView52"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1.Inform of a PDF file" />

            <TextView
                android:id="@+id/textView53"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="!.Docx file " />

            <TextView
                android:id="@+id/textView54"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="3.Inform of an audio(Broadcast)" />

            <TextView
                android:id="@+id/textView55"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="4.In form of a video." />

            <TextView
                android:id="@+id/textView56"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Please follow on with the given tutorials on how to do it.Thanks" />

            <Button
                android:id="@+id/upload_pdf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_pdf" />

            <Button
                android:id="@+id/upload_docx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_docx" />

            <Button
                android:id="@+id/btn_music"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/audio" />

            <Button
                android:id="@+id/btn_video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/video" />

            <TextView
                android:id="@+id/uriTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/dwnTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>